--- a/app/views/students/_students_table.haml
+++ b/app/views/students/_students_table.haml
@@ -1,10 +1,10 @@
-%table.dynatable
+%table.dynatable.no-table-header
   %thead
     %tr
       %th
-      %th
       %th First Name
       %th Last Name
+      %th
       - if current_course.in_team_leaderboard? || current_course.character_names?
         %th Screenname
       - if current_course.has_teams?
@@ -20,11 +20,11 @@
         %td
           = div_for student do
             = link_to flagged_user_icon(current_course, current_user, student.id), flag_user_path(student), method: :post, remote: true, class: "flagged-user-icon"
+        %td= link_to student.first_name, student_path(student)
+        %td= link_to student.last_name, student_path(student)
         %td
           - if student.avatar_file_name.present?
             %img.img-rounded{:src => student.avatar_file_name, :width => 30}
-        %td= link_to student.first_name, student_path(student)
-        %td= link_to student.last_name, student_path(student)
         - if current_course.in_team_leaderboard? || current_course.character_names?
           %td
             = student.display_name
