added classes for mobile table styling for assignment types page, staff index and user index

--- a/app/views/assignment_types/index.html.haml
+++ b/app/views/assignment_types/index.html.haml
@@ -42,7 +42,7 @@
 
   %h4.subtitle= "#{term_for :student} Scores"
 
-  %table.dynatable
+  %table.dynatable.no-table-header.no-button-bar
     %thead
       %tr
         %th First Name
@@ -64,7 +64,7 @@
 
   %h4.subtitle= "#{term_for :student} Grade Counts"
 
-  %table.dynatable
+  %table.dynatable.no-table-header.no-button-bar
     %thead
       %tr
         %th First Name
