--- a/app/views/staff/index.html.haml
+++ b/app/views/staff/index.html.haml
@@ -7,7 +7,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  %table.dynatable
+  %table.dynatable.no-table-header
     %thead
       %tr
         %th
