put badge name in its own partial and added a column for it on badge index page in order to use as header on mobile tables.

--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -142,6 +142,9 @@ i.missing_grade
       a
         color: $color-white
 
+    .st-key
+      text-transform: capitalize
+
     tr:last-child, tr:first-child
       .st-key
         display: none
