split badge point value into new partial and modified mobile table styling for badge index for better legibility

--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -154,12 +154,23 @@ i.missing_grade
         padding: .5em
         font-size: .85rem
 
+  .badge-index-table
+    .st-key
+      width: 25%
+    .st-val
+      width: 75%
+    .button-bar
+      text-align: right
+
   table.second-row-header
     tr:first-child
       display: none
     tr:nth-child(2)
       .st-key
         display: none
+      .st-val
+        padding: .5em
+        font-size: .85rem
 
   table.no-button-bar 
     tr:last-child
