--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -7,13 +7,14 @@
 .pageContent
   = render "layouts/alerts"
 
-  %table.badge-index-table{:class => ("student-index" if presenter.view_student_context?)}
+  %table.badge-index-table.second-row-header{:class => ("student-index" if presenter.view_student_context?)}
     %thead
       %tr
         %th.sort-column
-        %th.badge-name-column
-        %th.lock-icon-column
-        %th.icon-column
+        %th.badge-name-column Name
+        %th.icon-column Icon
+        %th.points-column Point Value
+        %th.lock-icon-column Locked?
         %th.earned_column Earned
         %th.description-column Description
         %th.button-column
@@ -37,14 +38,20 @@
                 = render partial: "badges/components/name",
                   locals: { badge: badge, title: link_to(badge.name, badge_path(badge)) }
 
-            // Lock Condition Icons
-            %td
-              = render partial: "badges/components/hover_icons", locals: { badge: badge }
-
             // Badge Icon
             %td
               = render partial: "badges/components/icon", locals: { badge: badge }
 
+            // Point Value
+            %td
+              - if current_course.valuable_badges?
+                = render partial: "badges/components/points", locals: { badge: badge }
+
+            // Lock Condition Icons
+            %td
+              = render partial: "badges/components/hover_icons", locals: { badge: badge }
+
+            // Badge Count
             %td
               = render partial: "badges/components/count", locals: { badge: badge, count: presenter.earned_badges_count(badge) }
 
