--- a/app/views/students/_students_table.haml
+++ b/app/views/students/_students_table.haml
@@ -4,7 +4,7 @@
       %th
       %th First Name
       %th Last Name
-      %th
+      %th Avatar
       - if current_course.in_team_leaderboard? || current_course.character_names?
         %th Screenname
       - if current_course.has_teams?
