more consistent styling of tables with no header and margin between button bar buttons on mobile

--- a/app/views/info/_grades_table.haml
+++ b/app/views/info/_grades_table.haml
@@ -13,7 +13,7 @@
 
     = form_tag edit_status_assignment_grades_path(assignment), method: :get do
 
-      %table.dynatable
+      %table.dynatable.no-table-header
         %thead
           %tr
             - if assignment.is_individual?
