--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -12,7 +12,7 @@
 
   %h4.subtitle= "#{term_for :student} Roster"
 
-  %table.dynatable
+  %table.dynatable.no-table-header
     %thead
       %tr
         %th First Name
