--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -124,6 +124,9 @@ i.missing_grade
     display: inline-block
     padding: 1px 2px
 
+  tbody ul.button-bar li:not(:last-of-type) a.button
+    margin-right: .5rem
+
 @media (max-width: 800px)
   .dynatable-sort-header
     pointer-events: none
