hid student sidebar on individual student view on staff side for small and medium devices

--- a/app/views/layouts/_staff.haml
+++ b/app/views/layouts/_staff.haml
@@ -12,5 +12,5 @@
   .mainContent{ class: (@display_sidebar ? "student" : "") }= render "layouts/content"
 
   - if @display_sidebar == true
-    .student-sidebar
+    .student-sidebar.hide-for-medium.hide-for-small
       = render "students/student_sidebar"
