Refactor render calls in announcements views

--- a/app/views/announcements/show.html.haml
+++ b/app/views/announcements/show.html.haml
@@ -9,7 +9,7 @@
       %li= link_to_unless_current glyph(:plus) + 'New Announcement', new_announcement_path
 
 .pageContent
-  = render "layouts/alerts"
+  = render partial: "layouts/alerts"
 
   %p
     %strong Course:
