--- a/app/views/announcements/index.html.haml
+++ b/app/views/announcements/index.html.haml
@@ -9,6 +9,6 @@
       %li= link_to_unless_current glyph(:plus) + "New Announcement", new_announcement_path
 
 .pageContent
-  = render "layouts/alerts"
+  = render partial: "layouts/alerts"
 
-  = render "list"
+  = render partial: "announcements/list"
