--- a/app/views/assignment_types/edit.html.haml
+++ b/app/views/assignment_types/edit.html.haml
@@ -2,7 +2,7 @@
 
 %h3.pagetitle= @title
 
-= render "buttons"
+= render partial: "assignment_types/buttons"
 
 .pageContent
-  = render "form"
+  = render partial: "assignment_types/form"
