--- a/app/views/assignment_types/show.html.haml
+++ b/app/views/assignment_types/show.html.haml
@@ -2,11 +2,11 @@
 
 %h3.pagetitle#pageCaption= @title
 
-= render "buttons"
+= render partial: "assignment_types/buttons"
 
 .pageContent
 
-  = render "layouts/alerts"
+  = render partial: "layouts/alerts"
 
   %table.dynatable{"aria-describedby" => "tableCaption"}
     %thead
