--- a/app/views/assignments/_show_student.haml
+++ b/app/views/assignments/_show_student.haml
@@ -3,7 +3,7 @@
 %h3.pagetitle= presenter.title
 
 .pageContent
-  = render "layouts/alerts"
+  = render partial: "layouts/alerts"
 
   #tabs.ui-tabs.ui-widget
     %ul.ui-tabs-nav{role: "tablist"}
@@ -33,9 +33,9 @@
           = render partial: "rubrics/components/rubric_table", locals: { rubric: presenter.rubric, presenter: presenter, student: current_student, include_grade_info: false }
       - if presenter.has_submission_for?(current_student)
         #tab3
-          = render "submissions/submission_content",
-              presenter: Submissions::ShowPresenter.new(id: presenter.submission_for_assignment(current_student).id,
-                assignment_id: presenter.assignment.id, course: current_course)
+          = render partial: "submissions/submission_content",
+              locals: { presenter: Submissions::ShowPresenter.new(id: presenter.submission_for_assignment(current_student).id,
+                assignment_id: presenter.assignment.id, course: current_course) }
         #history
           = history_timeline presenter.submission_grade_history(current_student)
       - if presenter.grades_available_for? current_student
@@ -44,6 +44,6 @@
         - if !presenter.hide_analytics?
           #tab5
             - if presenter.assignment.has_groups?
-              = render "grades/analytics/group_analytics", presenter: presenter
+              = render partial: "grades/analytics/group_analytics", locals: { presenter: presenter }
             - else
-              = render "grades/analytics/individual_analytics", presenter: presenter
+              = render partial: "grades/analytics/individual_analytics", locals: { presenter: presenter }
