Refactor render calls in badges views

--- a/app/views/badges/edit.html.haml
+++ b/app/views/badges/edit.html.haml
@@ -5,4 +5,4 @@
 = render partial: "badges/context_menu", locals: { badge: @badge, actions: [:see, :award, :quick_award]}
 
 .pageContent
-  = render "form"
+  = render partial: "badges/form"
