--- a/app/views/badges/_form.haml
+++ b/app/views/badges/_form.haml
@@ -61,11 +61,11 @@
         %script(id="unlock-condition-template" type="text/x-template")
           %fieldset.unlock-condition
             = f.simple_fields_for :unlock_conditions, UnlockCondition.new, class: "form-inline", child_index: "child_index" do |ucf|
-              = render "layouts/unlock_condition_fields", f: ucf
+              = render partial: "layouts/unlock_condition_fields", locals: { f: ucf }
         - @badge.unlock_conditions.each do |condition|
           %fieldset.unlock-condition
             = f.simple_fields_for :unlock_conditions, condition, class: "form-inline" do |ucf|
-              = render "layouts/unlock_condition_fields", f: ucf
+              = render partial: "layouts/unlock_condition_fields", locals: { f: ucf }
       = link_to "Add a Condition", "#", class: "add-unlock-condition button"
 
   %section
