--- a/app/views/challenges/challenge_grades/mass_edit.html.haml
+++ b/app/views/challenges/challenge_grades/mass_edit.html.haml
@@ -3,7 +3,7 @@
 %h3.pagetitle= @title
 
 .pageContent
-  = render "layouts/alerts"
+  = render partial: "layouts/alerts"
 
   #massGrade
     = simple_form_for @challenge, method: :put, :url => mass_update_challenge_challenge_grades_path(@challenge) do |f|
