--- a/app/views/earned_badges/new.html.haml
+++ b/app/views/earned_badges/new.html.haml
@@ -3,6 +3,6 @@
 %h3.pagetitle= @title
 
 .pageContent
-  = render "layouts/alerts"
+  = render partial: "layouts/alerts"
 
-  = render "form"
+  = render partial: "challenge_grades/form"
