Refactor render calls in courses views

--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -10,7 +10,7 @@
         New Course
 
 .pageContent
-  = render "layouts/alerts"
+  = render partial: "layouts/alerts"
 
   %table.dynatable{"aria-describedby" => "tableCaption"}
     %thead
