Refactor render calls in earned_badges views
Also removed extra uses of layouts/alerts

--- a/app/views/earned_badges/new.html.haml
+++ b/app/views/earned_badges/new.html.haml
@@ -5,4 +5,4 @@
 .pageContent
   = render partial: "layouts/alerts"
 
-  = render partial: "challenge_grades/form"
+  = render partial: "earned_badges/form"
