--- a/app/views/earned_badges/mass_edit.html.haml
+++ b/app/views/earned_badges/mass_edit.html.haml
@@ -3,7 +3,7 @@
 %h3.pagetitle= @title
 
 .pageContent
-  = render "layouts/alerts"
+  = render partial: "layouts/alerts"
 
   = team_filter(@teams) if current_course.has_teams?
 
