--- a/app/views/grade_scheme_elements/index.html.haml
+++ b/app/views/grade_scheme_elements/index.html.haml
@@ -10,7 +10,7 @@
         Edit
 
 .pageContent
-  = render "layouts/alerts"
+  = render partial: "layouts/alerts"
 
   / Grade Scheme Elements Table Display
   %table{"aria-describedby" => "tableCaption"}
