--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -2,24 +2,24 @@
 
 %h3.pagetitle= @title
 
-= render "buttons"
+= render partial: "groups/buttons"
 
 .pageContent
-  = render "layouts/alerts"
+  = render partial: "layouts/alerts"
 
   - if @pending_groups.present?
     %h4.subtitle= "Pending #{term_for :groups}"
 
-    = render "groups_table", course: current_course, :groups => @pending_groups
+    = render partial: "groups/groups_table", locals: { course: current_course, :groups => @pending_groups }
 
   - if @rejected_groups.present?
 
     %h4.subtitle.fail= "Rejected #{term_for :groups}"
 
-    = render "groups_table", course: current_course, :groups => @rejected_groups
+    = render partial: "groups/groups_table", locals: { course: current_course, :groups => @rejected_groups }
 
   - if @approved_groups.present?
 
     %h4.subtitle.success= "Approved #{term_for :groups}"
 
-    = render "groups_table", course: current_course, :groups => @approved_groups
+    = render partial: "groups/groups_table", locals: { course: current_course, :groups => @approved_groups }
