--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -5,7 +5,7 @@
 
 %h3.pagetitle= @title
 
-= render "buttons"
+= render partial: "groups/buttons"
 
 .pageContent
-  = render "form"
+  = render partial: "groups/form"
