--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -3,7 +3,7 @@
 %h3.pagetitle= @title
 
 - if current_user_is_staff?
-  = render "buttons"
+  = render partial: "groups/buttons"
 
 .pageContent
-  = render "form"
+  = render partial: "groups/form"
