--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -7,9 +7,9 @@ body
   position: relative
 
 .inner-wrap
-  margin: 2rem 0 0
+  margin: 2rem auto 0 auto
+  max-width: 1500px
   width: 100%
-  height: 100%
 
 .outer-wrap
   padding: 0.1rem 0
