--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -10,10 +10,8 @@ a.site-title
   color: $color-blue-1
 
 .container
-  width: 95%
+  width: 100%
   margin: 0 auto
-  &.navbar
-    width: 100%
 
 /* In app mobile left flyout menu styles */
 .layout-left-flyout
@@ -116,6 +114,12 @@ a.site-title
   top: 0 !important
   z-index: 1000
   height: 45px !important
+
+.logged-out
+  .navbar
+    background-color: $color-blue-1
+
+.the-nav
   background-color: $color-blue-1
 
 ul.subnav.logged-out
@@ -184,20 +188,12 @@ ul.subnav.logged-out
 @media (min-width: $media-medium-max)
   .navbar
     height: auto
-  .container
-    width: 95%
-    margin: 0 auto
+
   .the-nav
     display: block
-  .the-nav .nav
-    display: block
-  .the-nav .nav-pill:after
-    content: ""
-    display: table
-    clear: both
-  .the-nav .nav-pill.left
-    height: 45px
-    overflow: hidden
+    max-width: 1500px
+    margin: 0 auto
+
   .the-nav .nav-pill.right
     z-index: 100
   .the-nav > .nav
@@ -280,6 +276,9 @@ ul.subnav.logged-out
 @media (max-width: $media-medium-max)
   .logged-in .navbar .nav-collapse
     display: none
+
+  .navbar
+    background-color: $color-blue-1
 
   .nav.nav-pill
     padding: 0
