--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -87,6 +87,12 @@ h3.pagetitle
   font-weight: 100
   opacity: .8
 
+.student
+  h3.pagetitle
+    background-color: $color-white
+    color: $color-blue-2
+    opacity: 1
+
 /** Subtitle **/
 h4.subtitle
   font-size: 1.3rem
