removed student right sidebar from student and instructor view of student

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -32,7 +32,7 @@ body
   min-height: 100%
 
 .student.mainContent
-  width: calc(100% - 318px)
+  width: 100%
   float: left
 
 /* Allow other things to appear above the timeline */
