--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -16,6 +16,17 @@
   .card-body
     padding: 0.5em
 
+  .todo .card-body
+    padding: 0
+
+  .todo li
+    list-style-type: none
+
+  .assignment-item
+    padding: 0.5em
+
+    &:nth-child(even)
+      background-color: $color-grey-6
 
   .avatar
     text-align: center
@@ -33,7 +44,6 @@
   //   border: 1px solid #eee
 
   a
-    color: $color-blue-4
     font-weight: 300
     &:hover
       color: $color-green-2
@@ -46,21 +56,6 @@
     color: $color-green-2
     font-style: normal
     font-weight: 300
-
-  .todo li
-    list-style-type: none
-
-  .assignment-item
-    border-bottom: 1px dashed $color-white
-    padding-bottom: .5rem
-    margin-bottom: .5rem
-
-    &:last-of-type
-      border: none
-      padding-bottom: 0
-      margin-bottom: 0
-    .button:hover
-      background-color: $color-blue-4
 
   ul.block-grid
     margin: 0.5rem auto !important
